--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Alata", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -32,10 +32,18 @@ body {
   min-height: 100vh;
   overflow: hidden;
   background: #05010d !important;
+  color: white !important;
+  font-family: "Alata", sans-serif !important;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Alata", sans-serif !important;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3em;
   line-height: 1.1;
 }
 
